# modsec-test

./: .gitignore  MODULE.bazel  README.md  steps-to-build-pcre2.md  steps-to-build-poco.md
modsec-diff/: CMakeLists.txt  vcbuild.bat
modsecurity/: BUILD.bazel  libModSecurity.lib
modsecurity/headers/modsecurity/: transaction.h
modsecurity/static/: libinjection.lib  mbedcrypto.lib
pcre2/: BUILD.bazel  pcre2-8-static.lib
poco/: BUILD.bazel
source/: BUILD.bazel  basic_rules.conf  main.cc
